--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -12,7 +14,7 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -21,31 +23,46 @@ jobs:
         distribution: 'temurin'
         
     - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+      uses: android-actions/setup-android@v3
       
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: |
+        ls -la
+        chmod +x ./gradlew
+      
+    - name: Validate Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
       
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: |
+        ./gradlew assembleDebug
+        ./gradlew assembleRelease
       
     - name: Run tests
       run: ./gradlew test
       
-    - name: Upload APK artifact
+    - name: Upload Debug APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: app-debug-apk
+        path: app/build/outputs/apk/debug/*.apk
+        retention-days: 7
+        
+    - name: Upload Release APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release-apk
+        path: app/build/outputs/apk/release/*.apk
+        retention-days: 7
         
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -54,18 +71,19 @@ jobs:
         distribution: 'temurin'
         
     - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+      uses: android-actions/setup-android@v3
       
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Create Release APK
+      run: |
+        chmod +x ./gradlew
+        ./gradlew assembleRelease
       
-    - name: Build Release APK
-      run: ./gradlew assembleRelease
-      
-    - name: Create Release
+    - name: Upload Release APK
       uses: softprops/action-gh-release@v1
       with:
-        files: app/build/outputs/apk/release/app-release.apk
+        files: app/build/outputs/apk/release/*.apk
         generate_release_notes: true
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
